Fix train update

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
         <div class="col-md-12">
           <!-- Add Employee  -->
           <div class="card mb-4">
-            <div class="card-header">Add Train</div>
+            <div class="card-header" id="trainForm">Add Train</div>
             <div class="card-body">
 
               <!-- Entry Form -->
@@ -91,7 +91,7 @@
                   <label for="freq-input">Frequency (min)</label>
                   <input class="form-control" id="freq-input" placeholder="60" type="text">
                 </div>
-                <button class="btn btn-primary float-right" id="add-train-btn">Submit</button>
+                <button class="btn btn-primary float-right" id="add-train-btn">Add Train</button>
               </form>
 
             </div>
