--- a/index.html
+++ b/index.html
@@ -1,3 +1,8 @@
+<!-- HTML for Bootcamp Homework #7 -->
+<!-- Paul Raab -->
+<!-- Raab Enterprises LLC -->
+<!-- 4/12/2019 -->
+<!-- Train Scheduler App -->
 <!DOCTYPE html>
 <html>
 
@@ -5,8 +10,9 @@
     <meta charset=utf-8 />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <title>Email Link Authentication Example</title>
+    <title>Train Scheduler</title>
 
+    <!-- Reset browsers to initial conditions -->
     <link rel="stylesheet" type="text/css" href="./assets/css/reset.css">
 
     <!-- jQuery -->
