--- a/main.html
+++ b/main.html
@@ -53,7 +53,7 @@
       <div class="jumbotron .align-top" style="background-color: black; color: white">
         <h1 class="text-center .align-top">Train Scheduler</h1>
         <h3 class="text-center">Manage trains and their schedules</h3>
-        <button class="btn btn-primary float-right" id="googleSignout">Signout</button>
+        <button class="btn btn-primary float-right" id="signout">Signout</button>
       </div>
 
       <div class="row">
